- Update PyML docker image - Remove 'output' option; only json output available
